Bug 130094 - List content pastes twice after Undo
Summary: List content pastes twice after Undo
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.1 all versions
Hardware: All All
: medium normal
Assignee: Jim Raykowski
URL:
Whiteboard: target:7.0.0 target:7.4.0
Keywords:
Depends on:
Blocks:
 
Reported: 2020-01-20 18:59 UTC by tomaskeb
Modified: 2022-02-08 18:28 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description tomaskeb 2020-01-20 18:59:06 UTC
Description:
after using Undo in a numbered/bulleted list, pasting from clipboard does not do what expected

Steps to Reproduce:
Create a bulleted/numbered list
Copy a line or more lines into the clipboard
Select a part of the list (e.g. a line) and paste the copied lines
Undo (Ctrl + Z)
Paste the copied lines again

Actual Results:
the text in the clipboard is pasted twice

Expected Results:
the text is pasted once


Reproducible: Always


User Profile Reset: No


OpenGL enabled: Yes

Additional Info:
Comment 1 Xisco Faulí 2020-01-20 19:15:29 UTC
Reproduced in

Version: 6.5.0.0.alpha0+
Build ID: fc1f85127968d1c2e0a53dace51bf8a78f9e6ca5
CPU threads: 4; OS: Linux 4.19; UI render: default; VCL: gtk3; 
Locale: en-US (en_US.UTF-8); UI-Language: en-US
Calc: threaded
Comment 2 Xisco Faulí 2020-01-20 19:17:19 UTC
Also reproduced in

Version: 5.2.0.0.alpha0+
Build ID: 3ca42d8d51174010d5e8a32b96e9b4c0b3730a53
Threads 4; Ver: 4.19; Render: default; 

and

Version 4.1.0.0.alpha0+ (Build ID: efca6f15609322f62a35619619a6d5fe5c9bd5a)
Comment 3 Xisco Faulí 2020-01-20 19:18:03 UTC
@Jim, I thought you might be interested in this issue...
Comment 4 Jim Raykowski 2020-02-01 08:13:03 UTC
Seems to have been introduced by commit 24019d56fbc4ac94bd1b72b37a9bcabc7ef8164b
 
Here is a patch that works around the commit for numbered/bulleted lists:
https://gerrit.libreoffice.org/#/c/core/+/87795/
Comment 5 Commit Notification 2020-03-12 21:22:58 UTC
Jim Raykowski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/0409c260b6be9d52e91ce3becebdd400e996b596

tdf#130094 Work around content pastes twice after undo

It will be available in 7.0.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 BogdanB 2020-05-10 12:23:38 UTC
Works ok.
Verified on:
Version: 7.0.0.0.alpha1
Build ID: 6a03b2a54143a9bc0c6d4c7f1...
CPU threads: 4; OS: Linux 5.4; UI render: default; VCL: gtk3; 
Locale: ro-RO (ro_RO.UTF-8); UI: en-US
Calc: threaded
Comment 7 Commit Notification 2022-02-08 18:28:02 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/c7a84ca2f5c526cb28411677981e15a2b757cd37

tdf#130094: sw_uiwriter3: Add unittest

It will be available in 7.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.