tdf#130094 Work around content pastes twice after undo

commit 24019d56fbc4ac94bd1b72b37a9bcabc7ef8164b seems to have introduced
this behavior.

This patch is a work around that skips code introduced by the above
commit when selection type includes number list type.

Change-Id: I7a74ad7262e3e008f6aa11fe04fb81b9604ef3e1
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/87795
Tested-by: Jenkins
Reviewed-by: Jim Raykowski <raykowj@gmail.com>